docs fixed table line wrap

--- a/docsrc/_static/css/custom.css
+++ b/docsrc/_static/css/custom.css
@@ -6,3 +6,8 @@ table.tight-table {
 .tight-table td {
     white-space: normal !important;
 }
+
+.wy-table-responsive table td,
+.wy-table-responsive table th {
+  white-space: normal;
+}
